--- a/CyclingManager.iOS/Main.storyboard
+++ b/CyclingManager.iOS/Main.storyboard
@@ -540,8 +540,8 @@
                                             <constraint firstAttribute="width" constant="240" id="yAM-Ly-spg"/>
                                         </constraints>
                                         <segments>
-                                            <segment title="Teams"/>
                                             <segment title="Cyclists"/>
+                                            <segment title="Teams"/>
                                         </segments>
                                         <connections>
                                             <action selector="CompetitionDetailTableSource:" destination="1xq-h7-uGu" eventType="valueChanged" id="mO7-nO-wen"/>
@@ -561,11 +561,11 @@
                                     <constraint firstItem="cOQ-y4-nYq" firstAttribute="centerX" secondItem="IjT-Ev-9HD" secondAttribute="centerX" id="qz6-2o-dwc"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="74w-jE-zRj">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="74w-jE-zRj">
                                 <rect key="frame" x="0.0" y="136" width="600" height="415"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="zXF-eY-xMj" customClass="CompetitionTableCyclerCell">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="CompetitionCyclerCell" id="zXF-eY-xMj" customClass="CompetitionTableCyclerCell">
                                         <rect key="frame" x="0.0" y="28" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="zXF-eY-xMj" id="PdY-lJ-vfA">
@@ -585,7 +585,7 @@
                                             <outlet property="CyclerNameLabel" destination="AXo-YM-TRX" id="YCY-aq-ic3"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="QtQ-XW-23H" customClass="CompetitionTableTeamCell">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="CompetitionTeamCell" id="QtQ-XW-23H" customClass="CompetitionTableTeamCell">
                                         <rect key="frame" x="0.0" y="72" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="QtQ-XW-23H" id="BHM-Dc-Vqi">
@@ -610,13 +610,18 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="74w-jE-zRj" firstAttribute="top" secondItem="IjT-Ev-9HD" secondAttribute="bottom" constant="8" id="1LC-KJ-BQd"/>
+                            <constraint firstAttribute="trailing" secondItem="74w-jE-zRj" secondAttribute="trailing" id="CkJ-P0-Hu2"/>
                             <constraint firstItem="IjT-Ev-9HD" firstAttribute="leading" secondItem="nZs-Iv-iwg" secondAttribute="leading" id="M6m-bJ-85P"/>
                             <constraint firstItem="IjT-Ev-9HD" firstAttribute="top" secondItem="nZs-Iv-iwg" secondAttribute="top" id="Ug3-cx-B7v"/>
+                            <constraint firstItem="74w-jE-zRj" firstAttribute="leading" secondItem="nZs-Iv-iwg" secondAttribute="leading" id="VD6-tI-mpF"/>
+                            <constraint firstItem="rFx-4l-RMr" firstAttribute="top" secondItem="74w-jE-zRj" secondAttribute="bottom" id="thw-mX-Rsv"/>
                             <constraint firstAttribute="trailing" secondItem="IjT-Ev-9HD" secondAttribute="trailing" id="vA6-tx-fb6"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="CompetitionDateLabel" destination="87f-OL-kI5" id="NuM-gx-Ncx"/>
+                        <outlet property="CompetitionDetailTable" destination="74w-jE-zRj" id="EQz-xb-pOn"/>
                         <outlet property="CompetitionNameLabel" destination="Ypj-AH-MCE" id="1Si-CM-8LR"/>
                     </connections>
                 </viewController>
